--- a/client/index.html
+++ b/client/index.html
@@ -2,148 +2,87 @@
 <html>
 
 <head>
+  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles/main.css">
+  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet'/>
 </head>
-
 <body ng-app="directoryApp">
-  <div class="container">
-    <div class="row">
-      <h1>UF Directory App</h1>
-    </div>
-    <div class="row" ng-controller="ListingsController">
-      <div class="col-md-6">
-        <div class="input-group" id="searchBar">
-          <!-- 
-                Implement a way to filter through listings using the search bar 
-              -->
-          <span class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-search"></span></span>
-          <input type="text" ng-model="search" class="form-control" placeholder="Search">
-        </div>
-        <div class="tableWrapper">
-          <table class="table table-striped table-hover">
-            <tr>
-              <th>Code</th>
-              <th>Building Name</th>
-              <th></th>
-            </tr>
-            <!-- 
-                  Fill in the rest of the table:
-                      * populate the rows with the code and name of each listing
-                      * include a way to remove individual listings
-                -->
-            <tr ng-repeat="listing in listings | filter: search | orderBy: 'code'" ng-click="showDetails(listings.indexOf(listing))">
-              <td class="code">{{listing["code"]}}</td>
-              <td class="name">{{listing["name"]}}</td>
-              <td></td>
-            </tr>
-          </table>
-        </div>
-        <!-- 
-              Write an HTML form that adds new listings to the directory 
-            -->
-        <form>
-          <div class="panel-group">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h4 class="panel-title">
-                  <a data-toggle="collapse" href="#collapse1">Add a New Listing</a>
-                </h4>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+                  <a class="navbar-brand" href="#">Teachr</a>
               </div>
-              <!-- <h4>Add a New Listing</h4> -->
-              <!-- <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Add Listing</button> -->
-              <div id="collapse1" class="panel-collapse collapse">
-                <div class="panel-body">
-                  <div class="form-group">
-                    <label for="buildingCode">Building Code</label>
-                    <input type="text" ng-model="entry.code" class="form-control" id="buildingCode" aria-describedby="buildingCode"
-                      placeholder="AAF">
-                    <small id="buildingCode" class="form-text text-muted">Enter 3-4 Letter Code</small>
-                  </div>
-                  <div class="form-group">
-                    <label for="buildingName">Building Name</label>
-                    <input type="text" ng-model="entry.name" class="form-control" id="buildingName" aria-describedby="buildingName"
-                      placeholder="Academic Advisement - Farrior Hall">
-                    <small id="buildingName" class="form-text text-muted">Enter the Building's Name</small>
-                  </div>
-                  <div class="form-group">
-                    <label for="coordinates">Coordinates</label>
-                    <div class="row">
-                        <div class="form-inline">
-                          <div class="col-md-4">
-                            <div class="input-group">
-                              <input type="number" ng-model="entry.coordinates.latitude" class="form-control rounded" placeholder="29.6502323">
-                              <small class="form-text text-muted">Latitude</small>
-                            </div>
-                          </div>
-                          <div class="col-md-4">
-                            <div class="input-group">
-                              <input type="number" ng-model="entry.coordinates.longitude" class="form-control rounded" placeholder="-82.34563860000002">
-                              <small class="form-text text-muted">Longitude</small>
-                            </div>
-                          </div>
-                        </div>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="buildingAddress">Building Address</label>
-                    <input type="text" ng-model="entry.address" class="form-control" id="buildingAddress"
-                      aria-describedby="buildingAddress" placeholder="100 Fletcher Dr, Gainesville, FL 32611, United States">
-                    <small id="buildingAddress" class="form-text text-muted">Enter the Building's Address</small>
-                  </div>
-                </div>
-                <div class="panel-footer">
-                  <button type="submit" ng-click="addListing()" class="btn btn-primary">Submit</button>
-                </div>
-              </div>
-            </div>
+              <ul class="nav navbar-nav">
+                  <li><a href="#">My Professors</a></li>
+                  <li><a href="#">My TAs</a></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                  <li><a href="#" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-search"></span> Search</a></li>
+                  <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                  <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+              </ul>
           </div>
-        </form>
-      </div>
-      <div class="col-md-6">
-        <div class="jumbotron">
-          <h2>Detailed Information</h2>
-          <!-- 
-              Include a way to display detailed information about an individual listing:
-                   * consider how to use ng-click within the the table to implement this feature
-             -->
-          <div id="moreInfo" class="collapse">
-            <div class="form-group">
-              <label for="buildingCode">Building Code</label>
-              <p>{{detailedInfo.code}}</p>
-            </div>
-            <div class="form-group">
-              <label for="buildingName">Building Name</label>
-              <p>{{detailedInfo.name}}</p>
-            </div>
-            <div ng-if = "detailedInfo.coordinates !== undefined">
-            <div class="form-group">
-              <label for="coordinates">Coordinates</label>
-              <div class="form-group">
-                <p>{{detailedInfo.coordinates.latitude}}</p>
+      </nav>
+      <!-- Modal -->
+      <div id="myModal" class="modal fade" role="dialog">
+          <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h4 class="modal-title"> Search for...</h4>
               </div>
-              <div class="form-group">
-                <p>{{detailedInfo.coordinates.longitude}}</p>
+              <div class="modal-body">
+                  <div class="input-group" id="search-bar">
+                      <span class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-search"></span></span>
+                      <input type="text" ng-model="search" class="form-control" placeholder="Search">
+                  </div>
+                  <div class="tableWrapper">
+                      <table class="table table-striped table-hover">
+                          <tr>
+                              <th>Name</th>
+                              <th>Course(s)</th>
+                          </tr>
+                          <tr>
+                              <td>Jeremiah Blanchard</td>
+                              <td>Operating Systems<br>Programming Fundamentals One</td>
+                          </tr>
+                          <tr>
+                              <td>Alin Dobra, Ph.D.</td>
+                              <td>Operating Systems<br>Programming Fundamentals One</td>
+                          </tr>
+                      </table>
+                  </div>
               </div>
-            </div>
-          </div>
-          <div ng-if = "detailedInfo.address !== undefined">          
-            <div class="form-group">
-              <label for="buildingAddress">Building Address</label>
-              <p>{{detailedInfo.address}}</p>
-            </div>
-          </div>
-            <button type="button" ng-click="deleteListing(listings.indexOf(detailedInfo))" class="btn btn-danger"
-              data-toggle="collapse" data-target="#moreInfo">Delete Listing</button>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
+    <div id="map"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
     <script src="https://code.angularjs.org/1.4.3/angular.js"></script>
     <script src="js/app.js"></script>
     <script src="js/factories/listingFactory.js"></script>
     <script src="js/controllers/listingController.js"></script>
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
+    <script>
+      mapboxgl.accessToken = 'pk.eyJ1IjoibGlhbXZ3b29kIiwiYSI6ImNqb2VrNHM1djJ6a20za3BiemY3YWl3NGgifQ.MJb6DXk0ldlUeDpYmqmwJg';
+      var map = new mapboxgl.Map({
+          container: 'map', // container id
+          style: 'mapbox://styles/mapbox/streets-v9', // stylesheet location
+          center: [-82.324829, 29.651634], // starting position [lng, lat]
+          zoom: 10  // starting zoom
+      });
+      // Add geolocate control to the map.
+      map.addControl(new mapboxgl.GeolocateControl({
+          positionOptions: {
+              enableHighAccuracy: true
+          },
+          trackUserLocation: true
+      }));
+    </script>
 </body>
