--- a/client/index.html
+++ b/client/index.html
@@ -70,7 +70,7 @@
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                   <h1 class="text-center">Welcome to Teachr!</h1>
               </div>
-              <div class="modal-body">
+              <div class="modal-body row">
                   <h3 class="col-xs-12 text-center">Sign up using your UFL email</h3>
                   <div class="col-xs-offset-2 col-xs-8 col-md-offset-4 col-md-4">
                     <form name="vm.userForm" ng-submit="vm.signup(vm.userForm.$valid)" class="signin" novalidate autocomplete="off">
