--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
           </div>
       </nav>
       <!-- Modal -->
-      <div id="searchModal" class="modal fade" role="dialog">
+      <div id="searchModal" class="modal fade" role="dialog" ng-controller="ListingsController">
           <div class="modal-dialog">
             <!-- Modal content-->
             <div class="modal-content">
@@ -43,12 +43,17 @@
                           <tr>
                               <th>Code</th>
                               <th>Name</th>
+                              <th>Instructors</th>
+                              <th>Save</th>
                           </tr>
-                          <tr ng-repeat="listing in listings | filter: query" >
-                            
+                          <tr ng-repeat="listing in listings | filter: search" >
+
                           <td>{{listing.code}}</td>
                           <td>{{listing.name}}</td>
-                          <td ng-click="deleteListing($index)"><span style="color: red;" class="glyphicon glyphicon-remove"></span></td>
+                          <td>{{listing.instructor_names}}</td>
+                          <td ng-click="starListing($index)" >
+                            <span id="star" style="color: black;" class="glyphicon glyphicon-star"></span>
+                          </td>
                         </tr>
                       </table>
                   </div>
