--- a/client/index.html
+++ b/client/index.html
@@ -51,7 +51,7 @@
                           <td>{{listing.code}}</td>
                           <td>{{listing.name}}</td>
                           <td>{{listing.instructor_names}}</td>
-                          <td ng-click="starListing($index)" >
+                          <td ng-click="showDetails($index)" >
                             <span id="star" style="color: black;" class="glyphicon glyphicon-star"></span>
                           </td>
                         </tr>
