--- a/client/index.html
+++ b/client/index.html
@@ -25,72 +25,46 @@
             </ul>
         </div>
   </nav>
-  <!-- Modal -->
-  <div id="searchModal" class="modal fade" role="dialog">
-      <div class="modal-dialog">
-        <!-- Modal content-->
-        <div class="modal-content">
-          <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h4 class="modal-title"> Search for...</h4>
-          </div>
-      </nav>
-      <!-- Modal -->
-      <div id="searchModal" class="modal fade" role="dialog" ng-controller="ListingsController">
-          <div class="modal-dialog">
-            <!-- Modal content-->
-            <div class="modal-content">
-              <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  <h4 class="modal-title"> Search for...</h4>
-              </div>
-              <div class="modal-body">
-                  <div class="input-group" id="search-bar">
-                      <span class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-search"></span></span>
-                      <input type="text" ng-model="search" class="form-control" placeholder="Search">
-                  </div>
-                  <div class="tableWrapper">
-                      <table class="table table-striped table-hover">
-                          <tr>
-                              <th>Code</th>
-                              <th>Name</th>
-                              <th>Instructors</th>
-                              <th>Save</th>
-                          </tr>
-                          <tr ng-repeat="listing in listings | filter: search" >
-
-                          <td>{{listing.code}}</td>
-                          <td>{{listing.name}}</td>
-                          <td>{{listing.instructor_names}}</td>
-                          <td ng-click="starListing($index)" >
-                            <span id="star" style="color: black;" class="glyphicon glyphicon-star"></span>
-                          </td>
+  <!-- Search Modal -->
+  <div id="searchModal" class="modal fade" role="dialog" ng-controller="ListingsController">
+        <div class="modal-dialog">
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title"> Search for...</h4>
+            </div>
+            <div class="modal-body">
+                <div class="input-group" id="search-bar">
+                    <span class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-search"></span></span>
+                    <input type="text" ng-model="search" class="form-control" placeholder="Search">
+                </div>
+                <div class="tableWrapper">
+                    <table class="table table-striped table-hover">
+                        <tr>
+                            <th>Code</th>
+                            <th>Name</th>
+                            <th>Instructors</th>
+                            <th>Save</th>
                         </tr>
-                      </table>
-                  </div>
-              </div>
-              <div class="tableWrapper">
-                  <table class="table table-striped table-hover">
-                      <tr>
-                          <th>Name</th>
-                          <th>Course(s)</th>
+                        <tr ng-repeat="listing in listings | filter: search" >
+
+                        <td>{{listing.code}}</td>
+                        <td>{{listing.name}}</td>
+                        <td>{{listing.instructor_names}}</td>
+                        <td ng-click="starListing($index)" >
+                          <span id="star" style="color: black;" class="glyphicon glyphicon-star"></span>
+                        </td>
                       </tr>
-                      <tr>
-                          <td>Jeremiah Blanchard</td>
-                          <td>Operating Systems<br>Programming Fundamentals One</td>
-                      </tr>
-                      <tr>
-                          <td>Alin Dobra, Ph.D.</td>
-                          <td>Operating Systems<br>Programming Fundamentals One</td>
-                      </tr>
-                  </table>
-              </div>
+                    </table>
+                </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
           </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          </div>
-      </div>
     </div>
+  </div>
   </div>
   <!-- Sign Up Modal -->
   <div id="signUpModal" class="modal fade" role="dialog">
