--- a/client/index.html
+++ b/client/index.html
@@ -49,12 +49,13 @@
                             <th>Description</th>
                             <th>Location</th>
                             <th>Save</th>
+                            <th>Remove</th>
                         </tr>
                         <tr ng-repeat="listing in listings | filter: search" >
 
                           <td>{{listing.code}}</td>
                           <td>{{listing.name}}</td>
-                          <td><span ng-repeat="list in listing.instructor_names">{{list}} </span></td>
+                          <td><span ng-repeat="list in listing.instructor_names">{{list}}</span></td>
                           <td>{{listing.department}}</td>
                           <td>{{listing.description}}</td>
                           <td>{{listing.building}}</td>
@@ -64,8 +65,11 @@
                               Name: <input type="text" ng-model="newListing.name" /><br />
                               <button class="btn btn-primary" ng-click="updateListing($index)">Update</button>
                           </td> -->
-                          <td ng-click="starListing($index)" >
+                          <td ng-click="starListing(listing)" >
                             <span id="star" style="color: black;" class="glyphicon glyphicon-star"></span>
+                          </td>
+                          <td ng-click="deleteListing(listing)" >
+                            <span id="star" style="color: black;" class="glyphicon glyphicon-remove"></span>
                           </td>
                         </tr>
 
