--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,15 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles/main.css">
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' />
+
+  <script>
+    function chBackcolor(e) {
+      e.target.style.background = 'blue';
+    }
+  </script>
 </head>
 
-<body ng-app="directoryApp">
+<body ng-app="directoryApp" ng-controller="ListingsController">
   <!-- NavBar/Header -->
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -58,7 +64,72 @@
                   <div id="collapse1" class="panel-collapse collapse">
                     <div class="panel-body">
                       <div class="form-group">
-
+                        <table class="table table-bordered">
+                          <tr>
+                            <th>Periods:</th>
+                            <th>Monday</th>
+                            <th>Tuesday</th>
+                            <th>Wednesday</th>
+                            <th>Thursday</th>
+                            <th>Friday</th>
+                          </tr>
+                          <tr>
+                            <td> (1) 7:25 AM - 8:15 AM</td>
+                            <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
+                          </tr>
+                          <tr>
+                            <td> (2) 8:30 AM - 9:20 AM</td>
+                            <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
+                          </tr>
+                          <tr>
+                            <td> (3) 9:35 AM - 10:25 AM</td>
+                            <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
+                          </tr>
+                          <tr>
+                            <td> (4) 10:40 AM - 11:30 AM</td>
+                            <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
+                          </tr>
+                          <tr>
+                            <td> (5) 11:45 AM - 12:35 PM</td>
+                            <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
+                          </tr>
+                          <tr>
+                            <td> (6) 12:50 PM - 1:40 PM</td>
+                            <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
+                          </tr>
+                          <tr>
+                            <td> (7) 1:55 PM - 2:45 PM</td>
+                            <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
+                          </tr>
+                          <tr>
+                            <td> (8) 3:00 PM - 3:50 PM</td>
+                            <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
+                          </tr>
+                          <tr>
+                            <td> (9) 4:05 PM - 4:55 PM</td>
+                            <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
+                          </tr>
+                          <tr>
+                            <td> (10) 5:10 PM - 6:00 PM</td>
+                            <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
+                          </tr>
+                          <tr>
+                            <td> (11) 6:15 PM - 7:05 PM</td>
+                            <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
+                          </tr>
+                          <tr>
+                            <td> (E1) 7:20 PM - 8:10 PM</td>
+                            <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
+                          </tr>
+                          <tr>
+                            <td> (E2) 8:20 PM - 9:10 PM</td>
+                            <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
+                          </tr>
+                          <tr>
+                            <td> (E3) 9:20 PM - 10:10 PM</td>
+                            <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
+                          </tr>
+                        </table>
                       </div>
                     </div>
                   </div>
