--- a/client/login.html
+++ b/client/login.html
@@ -12,7 +12,7 @@
 <body>
     <div ng-app="directoryApp">
         <div class="container">
-            <div class="row" ng-controller="LoginController">
+            <div class="row" ng-controller="UserController">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
                     <h1>Teachr - Login</h1>
