--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
   </script>
 </head>
 
-<body ng-app="directoryApp" ng-controller="ListingsController">
+<body ng-app="directoryApp">
   <!-- NavBar/Header -->
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
