--- a/client/index.html
+++ b/client/index.html
@@ -69,15 +69,14 @@
     <script src="js/controllers/userController.js"></script>
     <script src="js/controllers/modalController.js"></script>
 
-
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
     <script>
-      mapboxgl.accessToken = 'pk.eyJ1IjoibGlhbXZ3b29kIiwiYSI6ImNqb2VrNHM1djJ6a20za3BiemY3YWl3NGgifQ.MJb6DXk0ldlUeDpYmqmwJg';
+      mapboxgl.accessToken = 'pk.eyJ1IjoidGhlbWVhbmllcyIsImEiOiJjanA5MDU4NWcwZTd5M2xta2l0MmhmYncyIn0.YToxrWErQ5TrXnsKKirjIw';
       var map = new mapboxgl.Map({
         container: 'map', // container id
         style: 'mapbox://styles/mapbox/streets-v9', // stylesheet location
-        center: [-82.324829, 29.651634], // starting position [lng, lat]
-        zoom: 10  // starting zoom
+        center: [-82.343468, 29.648609], // starting position [lng, lat]
+        zoom: 15  // starting zoom
       });
       // Add geolocate control to the map.
       map.addControl(new mapboxgl.GeolocateControl({
@@ -86,6 +85,24 @@
         },
         trackUserLocation: true
       }));
+      map.on('click', function (e) {
+          var features = map.queryRenderedFeatures(e.point, {
+            layers: ['layer-name-here'] // replace this with the name of the layer
+          });
+
+          if (!features.length) {
+            return;
+          }
+
+          var feature = features[0];
+
+          var popup = new mapboxgl.Popup({ offset: [0, -15] })
+            .setLngLat(feature.geometry.coordinates)
+            .setHTML('<h3>' + feature.properties.title + '</h3><p>' + feature.properties.description + '</p>')
+            .setLngLat(feature.geometry.coordinates)
+            .addTo(map);
+        });
+      
     </script>
   </div>
 </body>
