removing useless code

--- a/client/index.html
+++ b/client/index.html
@@ -85,23 +85,20 @@
         },
         trackUserLocation: true
       }));
-      map.on('click', function (e) {
-          var features = map.queryRenderedFeatures(e.point, {
-            layers: ['layer-name-here'] // replace this with the name of the layer
-          });
-
-          if (!features.length) {
-            return;
-          }
-
-          var feature = features[0];
-
-          var popup = new mapboxgl.Popup({ offset: [0, -15] })
-            .setLngLat(feature.geometry.coordinates)
-            .setHTML('<h3>' + feature.properties.title + '</h3><p>' + feature.properties.description + '</p>')
-            .setLngLat(feature.geometry.coordinates)
-            .addTo(map);
-        });
+      // map.addLayer({
+      //     id: "marker",
+      //     type: "symbol",
+      //     source: {
+      //       type: "geojson",
+      //       data: {
+      //         type: "FeatureCollection",
+      //         features: [{ "type": "Feature", "geometry": { "type": "Point", "coordinates": [long, lat] } }]
+      //       }
+      //     },
+      //     layout: {
+      //       "icon-image": "custom-marker",
+      //     }
+      //   });
       
     </script>
   </div>
