added path dismissal for all modals

--- a/client/index.html
+++ b/client/index.html
@@ -61,6 +61,7 @@
     <script src="js/factories/listingFactory.js"></script>
     <script src="js/factories/authService.js"></script>
     <script src="js/factories/userService.js"></script>
+    <script src="js/factories/locationFactory.js"></script>
 
     <!-- Controllers -->
     <script src="js/controllers/listingController.js"></script>
