navbar isnt reloaded

--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <base href = '/'>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles/main.css">
@@ -16,12 +17,12 @@
   </script>
 </head>
 
-<body ng-app="directoryApp">
+<body ng-app="directoryApp" ng-controller="MainController as vm">
   <!-- NavBar/Header -->
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Teachr</a>
+        <a class="navbar-brand">Teachr</a>
       </div>
       <ul class="nav navbar-nav">
         <li><a href="#">My Professors</a></li>
@@ -31,8 +32,9 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a ui-sref="edit" data-toggle="modal"><span class="glyphicon glyphicon-cog"></span> Edit</a></li>
         <li><a ui-sref="search" data-toggle="modal"><span class="glyphicon glyphicon-search"></span> Search</a></li>
-        <li><a ui-sref="signup" data-toggle="modal"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a ui-sref="signin" data-toggle="modal"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a ui-sref="signup" data-toggle="modal" ng-show="!vm.isLoggedIn"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a ui-sref="signin" data-toggle="modal" ng-show="!vm.isLoggedIn"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a ui-sref="logout" ng-click="vm.logout()" data-toggle="modal" ng-show="vm.isLoggedIn"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
       </ul>
     </div>
   </nav>
@@ -68,6 +70,7 @@
     <script src="js/controllers/searchController.js"></script>
     <script src="js/controllers/userController.js"></script>
     <script src="js/controllers/modalController.js"></script>
+    <script src="js/controllers/mainController.js"></script>
 
 
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
