--- a/client/index.html
+++ b/client/index.html
@@ -41,12 +41,11 @@
 
   <div id="map"></div>
   <style>
-  .marker {
+.marker {
   background-image: url('mapbox_icon.png');
-  background-size: contain;
-  background-repeat: no-repeat;
+  background-size: cover;
   width: 50px;
-  height: 100px;
+  height: 50px;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -90,61 +89,8 @@
     <script src="js/controllers/modalController.js"></script>
 
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
-    <script>
-      mapboxgl.accessToken = 'pk.eyJ1IjoidGhlbWVhbmllcyIsImEiOiJjanA5MDU4NWcwZTd5M2xta2l0MmhmYncyIn0.YToxrWErQ5TrXnsKKirjIw';
-      var map = new mapboxgl.Map({
-        container: 'map', // container id
-        style: 'mapbox://styles/mapbox/streets-v9', // stylesheet location
-        center: [-82.34435, 29.64831], // starting position [lng, lat]
-        zoom: 16  // starting zoom
-      });
-      // Add geolocate control to the map.
-      map.addControl(new mapboxgl.GeolocateControl({
-        positionOptions: {
-          enableHighAccuracy: true
-        },
-        trackUserLocation: true
-      }));
-      var geojson = {
-          type: 'FeatureCollection',
-          features: [{
-            type: 'Feature',
-            geometry: {
-              type: 'Point',
-              coordinates: [-82.34435, 29.64831]
-            },
-            properties: {
-              title: 'CSE',
-              description: 'Building 1'
-            }
-          }]
-        };
-      // map.addLayer({
-      //     id: "marker",
-      //     type: "symbol",
-      //     source: {
-      //       type: "geojson",
-      //       data: {
-      //         type: "FeatureCollection",
-      //         features: [{ "type": "Feature", "geometry": { "type": "Point", "coordinates": [long, lat] } }]
-      //       }
-      //     },
-      //     layout: {
-      //       "icon-image": "custom-marker",
-      //     }
-      //   });
-      geojson.features.forEach(function (marker) {
-
-            // create a HTML element for each feature
-            var el = document.createElement('div');
-            el.className = 'marker';
-
-            // make a marker for each feature and add to the map
-            new mapboxgl.Marker(el)
-              .setLngLat(marker.geometry.coordinates)
-              .addTo(map);
-          });
-    </script>
+    <script src='js/factories/geojson.js'></script>
+    <script src='js/controllers/mapController.js'></script>
   </div>
 </body>
 
