--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <base href = '/'>
+  <!-- <base href = '/'> -->
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles/main.css">
