--- a/client/index.html
+++ b/client/index.html
@@ -70,6 +70,7 @@
     <script src="js/controllers/userController.js"></script>
     <script src="js/controllers/modalController.js"></script>
 
+    <!-- Mapbox-->
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
     <script src='js/factories/geojson.js'></script>
     <script src='js/controllers/mapController.js'></script>
