setting up student

--- a/client/index.html
+++ b/client/index.html
@@ -66,6 +66,7 @@
     <script src="js/controllers/userController.js"></script>
     <script src="js/controllers/modalController.js"></script>
     <script src="js/controllers/mainController.js"></script>
+    <script src="js/controllers/detailsController.js"></script>
 
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
     <script>
